codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_auto_review_permissions.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

 >_ OpenAI Codex v0.0.0

 Model:            gpt-5.1-codex-max (reasoning none, summaries auto)
 Directory:        C:/workspace/tests
 Permissions:      Workspace (Approve for me)
 Agents.md:        <none>

 Token usage:      0 total  (0 input + 0 output)
 Context window:   100% left (0 used / 272K)
 Limits:           data not available yet

 Live usage:  https://chatgpt.com/codex/settings/usage
