codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_copilot_monthly_limit.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

 >_ OpenAI Codex v0.0.0

 Model:                   gpt-6-astra (reasoning none, summaries auto)
 Model provider:          GitHub Copilot
 Directory:               [[workspace]]
 Permissions:             Custom (workspace with network access, Ask for approv…
 Agents.md:               <none>

 Token usage:             0 total  (0 input + 0 output)
 Copilot monthly limit:   [█████████████░░░░░░░] 67% left
